# formula-one-classification-project

./: .gitignore  dvc.yaml  justfile  main.py  params.yaml  pyproject.toml  requirements.txt
dvclive/: metrics.json  params.yaml
dvclive/artifacts/: best.pt.dvc
dvclive/plots/: images.dvc
dvclive/plots/metrics/: CO2.tsv
dvclive/plots/metrics/lr/: pg0.tsv  pg1.tsv  pg2.tsv
dvclive/plots/metrics/metrics/: mAP50(B).tsv  mAP50-95(B).tsv  precision(B).tsv  recall(B).tsv
dvclive/plots/metrics/train/: box_loss.tsv  cls_loss.tsv  dfl_loss.tsv
dvclive/plots/metrics/val/: box_loss.tsv  cls_loss.tsv  dfl_loss.tsv
dvclive/plots/sklearn/: cf.json
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/detect/train3/: args.yaml  results.csv
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
src/: demo.py  evaluate.py  prepare.py  roboflow_secrets.py.example  train.py  transform.py  visualise.py
