[project]
name = "formula-one-classification-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "codecarbon>=3.1.0",
    "dvc>=3.64.0",
    "dvclive>=3.49.0",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.228",
]
